# schedule-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
client/: .env.example  index.html  package-lock.json  package.json
client/src/: App.tsx  index.css
client/src/components/: BotHelp.tsx  WeeklyCalendar.tsx
client/src/pages/: Dashboard.tsx  LandingPage.tsx
server/: .env.example  Dockerfile  pyproject.toml
server/src/api/: router.py
server/src/api/dependencies/: auth.py
server/src/api/routes/: auth_routes.py  calendar_routes.py  health_routes.py  user_routes.py
server/src/api/schemas/: calendar.py
server/src/application/: app.py
server/src/data/models/: user.py
server/src/data/repositories/: user_repository.py
server/src/domain/entities/: user.py
server/src/domain/services/: user_service.py
server/src/infrastructure/: config.py  database.py
src/: main.py
src/api/: router.py
src/api/routes/: health_routes.py
src/application/: app.py
src/infrastructure/: config.py
